# Tech-Exercises

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  tosho.txt  update-pr-depdendabot.ps1  vcpkg.json
.github/: dependabot.yml
.github/workflows/: build.yml  cmake-multi-platform.yml  codeql.yml  comment-test.yml  comment_test  create-pr.yml  dependabot-proxy.yml  main.yml  test.yml
GeorgiPalaviq/: go.mod  go.sum  main.go
GeorgiStefanov/: go.mod  go.sum  main.go
include/: actionsDynamic.h  randomTests.h
myDynamicLib/: CMakeLists.txt  otherTests.cpp
myLib/: CMakeLists.txt  randomTests.cpp
myLib.Test/: CMakeLists.txt  main.cpp  randomTests.Test.cpp
someActionsDynamic/: CMakeLists.txt  actionsDyn.cpp
someActionsStatic/: CMakeLists.txt  actionsSt.cpp
someActionsStatic.Test/: CMakeLists.txt  actionsSt.Test.cpp
src/: main.cpp
