# Set the minimum version of CMake that can be used
# To find the cmake version run
# $ cmake --version
cmake_minimum_required(VERSION 3.5)

set(CMAKE_TOOLCHAIN_FILE "D:/Libraries_Source/vcpkg/scripts/buildsystems/vcpkg.cmake")
# Set the project name
project (hello_headers)

set(CMAKE_CXX_STANDARD 20)

# Create a sources variable with a link to all cpp files to compile
set(SOURCES
    src/main.cpp
)

add_subdirectory(myLib)
add_subdirectory(myLib.Test)
add_subdirectory(myDynamicLib)

add_test(AllTestsInMain main)

# Add an executable with the above sources
add_executable(hello_headers ${SOURCES})

# Set the directories that should be included in the build command for this target
# when running g++ these will be included as -I/directory/path/
target_include_directories(hello_headers PUBLIC 
    "${PROJECT_SOURCE_DIR}"
    "${PROJECT_SOURCE_DIR}/include"
)

target_link_libraries(hello_headers
PUBLIC 
    myLib )
